# readwise-autosave

./: .env.example  CLAUDE.md  Cargo.toml
.claude/: settings.json
.claude/commands/: commit.md  learn.md  lint.md  new-feature.md  test.md
agent_docs/: architecture.md  atproto-api.md  readwise-api.md  rust-conventions.md  testing-guide.md  troubleshooting.md
migrations/: 001_initial.sql
src/: config.rs  main.rs
src/bluesky/: bookmarks.rs  chat.rs  client.rs  mod.rs  oauth.rs  types.rs
src/content/: formatter.rs  links.rs  mod.rs
src/db/: mod.rs  models.rs  queries.rs
src/readwise/: client.rs  highlights.rs  mod.rs  reader.rs
src/services/: bookmark_sync.rs  dm_bot.rs  mod.rs  processor.rs
src/web/: mod.rs  routes.rs
src/web/handlers/: api.rs  auth.rs  dashboard.rs  mod.rs
