[package]
name = "readwise-autosave"
version = "0.1.0"
edition = "2021"
description = "Bluesky/AT Protocol integration with Readwise"
license = "MIT"

[dependencies]
# AT Protocol (Nick Gerakines' crates)
atproto-client = "0.10"
atproto-oauth = "0.10"
atproto-oauth-axum = "0.10"
atproto-identity = "0.1"
atproto-record = "0.10"
atproto-xrpcs = "0.10"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Web Framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP Client
reqwest = { version = "0.12", features = ["json"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "2"
anyhow = "1.0"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Async traits
async-trait = "0.1"

# Utilities
url = "2"
urlencoding = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
